--- a/UI/financial_manager/package.json
+++ b/UI/financial_manager/package.json
@@ -24,6 +24,7 @@
     "@angular/router": "^18.1.0",
     "@angular/ssr": "^18.1.2",
     "express": "^4.18.2",
+    "luxon": "^3.5.0",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0",
     "zone.js": "~0.14.3"
@@ -34,6 +35,7 @@
     "@angular/compiler-cli": "^18.1.0",
     "@types/express": "^4.17.17",
     "@types/jasmine": "~5.1.0",
+    "@types/luxon": "^3.4.2",
     "@types/node": "^18.18.0",
     "autoprefixer": "^10.4.19",
     "jasmine-core": "~5.1.0",
