--- a/UI/financial_manager/package.json
+++ b/UI/financial_manager/package.json
@@ -24,7 +24,9 @@
     "@angular/router": "^18.1.0",
     "@angular/ssr": "^18.1.2",
     "express": "^4.18.2",
+    "jwt-decode": "^4.0.0",
     "luxon": "^3.5.0",
+    "ngx-cookie-service": "^18.0.0",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0",
     "zone.js": "~0.14.3"
