--- a/UI/financial_manager/package.json
+++ b/UI/financial_manager/package.json
@@ -23,9 +23,11 @@
     "@angular/platform-server": "^18.1.0",
     "@angular/router": "^18.1.0",
     "@angular/ssr": "^18.1.2",
+    "chart.js": "^4.4.4",
     "express": "^4.18.2",
     "jwt-decode": "^4.0.0",
     "luxon": "^3.5.0",
+    "ng2-charts": "^6.0.1",
     "ngx-cookie-service": "^18.0.0",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0",
